--- a/source/widget/courses/courses.less
+++ b/source/widget/courses/courses.less
@@ -25,6 +25,9 @@ ul,li{list-style: none;}
 .course-yellow-label{
 	background: #ffbc3c;
 }
+.course-green-label{
+	background: #37bc9b;
+}
 .button.course-gray{
 	background-color: #fcfcfc;
 	border: 1px solid #eaeaea;
@@ -63,6 +66,11 @@ ul,li{list-style: none;}
 	height: 10px;
 	background: url("img/bo-box.png") no-repeat left center;
 }
+
+.icon-record{
+	height: 10px;
+	background: url("img/icon-record.png") no-repeat left center;
+}
 .course-list {
 	font-family: "SimSun";
 	border-top: 1px solid @borderColor;
@@ -71,11 +79,20 @@ ul,li{list-style: none;}
 	overflow: hidden;
 	a{
 		color: @dark333;
+		&:hover{
+			color: #269cc8;
+		}
+		&:focus{
+			color: #269cc8;
+		}
 	}
 	.ui-avatar{
 		width: 80px;
 		text-align: center;
 		float: left;
+		span.ui-user-name{
+			font-size: 14px;
+		}
 		.avatar-photo{
 			margin-bottom: 4px;
 			display: inline-block;
@@ -249,6 +266,14 @@ ul,li{list-style: none;}
 			}
 		}
 	}
+
+	.cancel-courseList{
+		float: right;
+		font-size: 12px;
+		color: #3bafda;
+		height: 137px;
+		line-height: 220px;
+	}
 	.course-num{
 		width: 86px;
 		float: right;
@@ -283,6 +308,23 @@ ul,li{list-style: none;}
 		}
 		li.answer{
 			background: url("img/answer.png") no-repeat 0 center;
+		}
+	}
+	.course-right-record{
+		margin-top: 40px;
+		li{
+			padding-left: 24px;
+			font-size: 12px;
+			font-family: 'SimSun';
+			color: #333;
+			text-align: left;
+			margin-top: 6px;
+		}
+		li.interact-flash{
+			background: url("img/interact-flash.png") no-repeat 0 center;
+		}
+		li.direct-help{
+			background: url("img/direct-help.png") no-repeat 0 center;
 		}
 	}
 }
