--- a/source/widget/header/ui-header.less
+++ b/source/widget/header/ui-header.less
@@ -284,6 +284,7 @@
 .columns-wrap {
 	width: 1190px;margin:0 auto;overflow: hidden;
 	//定义几种页面布局共用的宽度
+	.w-130 {width:130px;}
 	.w-240{width: 240px;} 
 	.w-260{width: 260px;}
 	.w-690{width: 690px;} 
