--- a/source/widget/glory/glory.css
+++ b/source/widget/glory/glory.css
@@ -1,3 +1,22 @@
+.screen-rank {
+  overflow: hidden;
+  height: 38px;
+  border: 1px solid #eaeaea;
+  line-height: 38px;
+  margin: 0;
+}
+.screen-rank li {
+  list-style: none;
+  float: left;
+  font-size: 12px;
+  padding: 0 10px;
+  cursor: pointer;
+}
+.screen-rank li.popular-rank {
+  padding: 0 20px;
+  border-right: 1px solid #eaeaea;
+  color: #1e89e0;
+}
 .glory-content {
   margin: 0;
   font-family: 'SimSun';
@@ -9,6 +28,7 @@
 }
 .glory-content li {
   margin-bottom: 15px;
+  position: relative;
 }
 .glory-content .glory-water {
   padding: 0 9px;
@@ -96,4 +116,45 @@
   line-height: 30px;
   text-align: center;
   font-size: 12px;
+}
+.glory-window,
+.glory_window_come {
+  background: #fff none repeat scroll 0 0;
+  border: 1px solid #eaeaea;
+  display: none;
+  height: 0;
+  position: absolute;
+  width: 290px;
+  z-index: 900;
+}
+.glory_window_come .window_arrow {
+  background: rgba(0, 0, 0, 0) url("http://img04.xesimg.com/glory/glory_window_arrow.png") no-repeat scroll center center;
+  bottom: -8px;
+  height: 10px;
+  position: absolute;
+  width: 100%;
+  z-index: 10;
+}
+.window_detail {
+  height: 70px;
+  margin: 0 5px;
+  padding: 15px 5px 10px;
+  font-size: 12px;
+  font-family: "SimSun";
+}
+.window_detail span {
+  color: #666;
+}
+.window_detail span.teacher_name a {
+  color: #666;
+}
+.window_detail a.learning_course_name {
+  color: black;
+  display: block;
+  height: 16px;
+  margin-top: 5px;
+  overflow: hidden;
+}
+.window_detail a.learning_course_name:hover {
+  text-decoration: underline;
 }
