--- a/source/widget/errorQuestion/css/error_question.less
+++ b/source/widget/errorQuestion/css/error_question.less
@@ -299,6 +299,9 @@ div{
   height: 8rem;
   width: 100%;
   line-height: 8rem;
+  .left-fade{
+    color:rgb(59,175,218);
+  }
   .erq-head-min{
     width: 22rem;
     .erq-head{
