--- a/source/widget/gold/gold.less
+++ b/source/widget/gold/gold.less
@@ -67,12 +67,13 @@ em{font-style: normal;}
 /* 兑换遮罩 */
 .red-card-box,.present-box{overflow: hidden;margin: 42px 0;position: relative;}
 .red-card-box img,.present-box img{float: left;}
-.red-card-intro,.present-intro{float: left;margin-left: 42px;}
+.red-card-intro,.present-intro{display: block;margin-left: 372px;min-width: 230px;}
 .red-card-name,.present-name{display: block;font-size: 16px;margin: 10px 0;}
 .red-card-intro-name,.present-intro-name{font-size: 12px;margin: 18px 0;}
-.red-card-intro-name span,.present-intro-name span{display: inline-block;vertical-align: bottom;}
+.red-card-intro-name span,.present-intro-name span{vertical-align: bottom;}
 .red-card-intro-name span em,.present-intro-name span em{color: #e74c3c;}
-.red-card-intro-title,.present-intro-title{color: #999;}
+.red-card-intro-title,.present-intro-title{color: #999;float: left;}
+.present-intro-content{display: block;margin-left: 51px;}
 .red-card-intro-title span,.present-intro-title span{margin-left: 12px;}
 .red-card-dec,.present-dec{display: inline-block;margin-right: 10px;vertical-align: middle;width: 16px;height: 16px;background-color: #b5b5b5;border-radius: 18px;position: relative;cursor: pointer;}
 .p1{height: 2px;width: 10px;background-color: #fff;position: absolute;top: 7px;left: 3px;}
