--- a/source/widget/gold/gold.less
+++ b/source/widget/gold/gold.less
@@ -24,14 +24,14 @@ em{font-style: normal;}
 .gold-detail-block-change,.gold-store-block-change,.gold-exchange-block-change,.gold-exchange-use-block-change{display: none;}
 
 /* 金币商城 */
-.gold-store-title-container,.gold-exchange-title-container{float: left;border-radius: 5px;margin-right: 22px;width: 122px;height: 660px;background-color: #fff;font-size: 14px;overflow: hidden;}
+.gold-store-title-container,.gold-exchange-title-container{float: left;border-radius: 5px;margin-right: 22px;margin-top: 22px;width: 122px;height: 660px;background-color: #fff;font-size: 14px;overflow: hidden;}
 .gold-store-title-container li,.gold-exchange-title-container li{height: 32px;line-height: 32px;margin: 22px 0;padding-left: 20px;cursor: pointer;}
 .gold-store-title-on,.gold-exchange-title-on{background-color: #3bafda;color: #fff;}
-.gold-store-container,.gold-exchange-container{overflow: hidden;margin-top: 22px;}
-.gold-store-card-box,.gold-exchange-card-box,.gold-exchange-present-box{overflow: hidden;width: 924px;}
+.gold-store-container,.gold-exchange-container{position: relative;}
+.gold-store-card-box,.gold-store-present-box,.gold-exchange-card-box,.gold-exchange-present-box{overflow: hidden;width: 934px;position: absolute;left: 140px;margin-top: 12px;}
 .gold-exchange-card-box p{height: 18px;width: 1px;background-color: #eaeaea;display: inline-block;margin-left: 21px;margin-bottom: 0;vertical-align: middle;}
 .gold-store-card-box-over,.gold-store-present-card-box,.gold-exchange-present-card-box{width: 936px;overflow: hidden;}
-.gold-store-card,.gold-store-present-card,.gold-exchange-present-card{width: 222px;background-color: #fff;border-radius: 5px;overflow: hidden;float: left;margin: 0 12px 12px 0;}
+.gold-store-card,.gold-store-present-card,.gold-exchange-present-card{width: 222px;background-color: #fff;border-radius: 5px;overflow: hidden;float: left;margin: 10px 7px 12px 5px;}
 .gold-store-card-img-box,.gold-store-present-img-box,.gold-exchange-present-img-box{height: 164px;line-height: 164px;text-align: center;}
 .gold-store-card-price-box{width: 200px;font-size: 12px;color: #999;margin: 0 auto;overflow: hidden;}
 .gold-store-card-price{float: left;}
@@ -40,11 +40,11 @@ em{font-style: normal;}
 .gold-store-card-level em{margin-left: 10px;font-weight: bold;color: #333;}
 .gold-store-card p{width: 200px;font-size: 12px;color: #333;margin: 12px auto;}
 .gold-store-card-exchange,.gold-store-present-exchange{width: 100px;height: 34px;background-color: #e74c3c;margin: 28px auto;text-align: center;font-size: 14px;line-height: 34px;color: #fff;border-radius: 3px;cursor: pointer;}
-.gold-store-present-rank,.gold-exchange-rank{width: 924px;height: 52px;font-size: 14px;background-color: #fff;border-radius: 5px;overflow: hidden;}
+.gold-store-present-rank,.gold-exchange-rank{width: 924px;height: 52px;margin-top: 10px;margin-left: 5px;font-size: 14px;background-color: #fff;border-radius: 5px;overflow: hidden;}
 .gold-store-present-rank-by,.gold-exchange-rank-by{line-height: 52px;margin-left: 22px;color: #999;cursor: pointer;}
 .gold-store-present-rank-by em{color:#3bafda;}
 .gold-store-present-rank-new{margin-left: 20px;}
-.gold-store-present-card-container{overflow: hidden;width: 924px;margin-top: 20px;}
+.gold-store-present-card-container{overflow: hidden;width: 934px;margin-top: 10px;}
 .gold-exchange-present-card-container{overflow: hidden;width: 924px;}
 .gold-store-present-card-center,{text-align: center;font-size: 14px;}
 .gold-store-present-card-name{color: #333;display: block;margin: 20px 0 5px;}
