--- a/source/widget/footer/ui-footer.css
+++ b/source/widget/footer/ui-footer.css
@@ -13,10 +13,10 @@
   overflow: hidden;
 }
 /*===============/下：关于我们部分/====================*/
-#footer .foot_area {
+#footer .foot-area {
   padding: 20px 0;
 }
-#footer .foot_area p {
+#footer .foot-area p {
   text-align: center;
   line-height: 180%;
   font-size: 12px;
@@ -24,28 +24,28 @@
   padding: 0;
   margin: 0;
 }
-#footer .foot_area p a {
+#footer .foot-area p a {
   padding: 0 5px;
   color: #333;
 }
-#footer .foot_area p strong {
+#footer .foot-area p strong {
   color: #e74c3c;
 }
-#footer .foot_area p .red {
+#footer .foot-area p .red {
   color: #e74c3c;
 }
-#footer .foot_area p.link {
+#footer .foot-area p.link {
   padding-top: 15px;
 }
 /*===============/上：学习经验分享/====================*/
-#footer .foot_service {
+#footer .foot-service {
   width: 980px;
   margin: 0 auto;
   overflow: hidden;
   padding-bottom: 20px;
   border-bottom: 1px solid #F1F1F1;
 }
-#footer .foot_service a {
+#footer .foot-service a {
   float: left;
   display: inline;
   width: 215px;
@@ -57,30 +57,30 @@
   text-decoration: none;
   font-size: 14px;
 }
-#footer .foot_service a p {
+#footer .foot-service a p {
   line-height: 150%;
   color: #666;
   text-align: left;
   font-size: 12px;
   font-family: "SimSun";
 }
-#footer .foot_service a:hover p,
-#footer .foot_service a:hover span {
+#footer .foot-service a:hover p,
+#footer .foot-service a:hover span {
   color: #3bafda;
 }
-#footer .foot_service a.service_share {
+#footer .foot-service a.service-share {
   background: url(img/A1_01.gif) no-repeat;
 }
-#footer .foot_service a.service_live {
+#footer .foot-service a.service-live {
   background: url(img/A1_02.gif) no-repeat;
 }
-#footer .foot_service a.service_system {
+#footer .foot-service a.service-system {
   background: url(img/A1_03.gif) no-repeat;
 }
-#footer .foot_service a.service_interaction {
+#footer .foot-service a.service-interaction {
   background: url(img/A1_04.gif) no-repeat;
 }
-#footer .foot_service a span {
+#footer .foot-service a span {
   display: block;
   line-height: 22px;
   font-weight: bold;
