--- a/source/widget/footer/ui-footer.less
+++ b/source/widget/footer/ui-footer.less
@@ -11,7 +11,7 @@
 /*===============/页脚部分/====================*/
 #footer {width:100%; border-top: 1px solid #e5e5e5;padding:0;overflow: hidden;}
 /*===============/下：关于我们部分/====================*/
-#footer .foot_area {
+#footer .foot-area {
 			padding:20px 0;
 		  p {
 		  	text-align: center;line-height: 180%;font-size: 12px;font-family: @fs;padding:0;margin:0;
@@ -24,7 +24,7 @@
 		  p.link {padding-top: 15px; }
 }
 /*===============/上：学习经验分享/====================*/
-#footer .foot_service {
+#footer .foot-service {
 			width: 980px;margin:0 auto;overflow: hidden; padding-bottom: 20px;border-bottom: 1px solid #F1F1F1;
 		 a { 
 		 	float: left; display: inline; width: 215px; overflow: hidden; cursor: pointer; height: 56px; margin: 10px 10px 0 20px; padding-left: 60px; text-decoration: none;font-size: 14px;
@@ -35,10 +35,10 @@
 		 		}
 		 	}
 		 }
-		 a.service_share {background: url(img/A1_01.gif) no-repeat;}
-		 a.service_live {background: url(img/A1_02.gif) no-repeat;}
-		 a.service_system {background: url(img/A1_03.gif) no-repeat;}
-		 a.service_interaction {background: url(img/A1_04.gif) no-repeat;}
+		 a.service-share {background: url(img/A1_01.gif) no-repeat;}
+		 a.service-live {background: url(img/A1_02.gif) no-repeat;}
+		 a.service-system {background: url(img/A1_03.gif) no-repeat;}
+		 a.service-interaction {background: url(img/A1_04.gif) no-repeat;}
 		 a span {display: block;line-height: 22px; font-weight: bold;color: #666;}
 
 }
