--- a/source/widget/gold/gold.less
+++ b/source/widget/gold/gold.less
@@ -1,6 +1,7 @@
 body{margin: 0;padding:0;background-color: #f1f2f6;}
 ul,li{list-style: none;margin: 0;}
 em{font-style: normal;}
+table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 /* 金币明细 */
 .gold-detail-title{margin: 0;overflow: hidden;font-size: 14px;border-bottom: 1px solid #3bafda;}
 .gold-detail-title li{float: left;width: 91px;text-align: center;line-height: 30px;cursor: pointer;}
@@ -11,7 +12,7 @@ em{font-style: normal;}
 .gold-detail-account-exchange{float: right;margin-right: 20px;font-size: 14px;color: #3bafda;display: inline-block;cursor: pointer;}
 .gold-detail-check-date{height: 30px;float: right;}
 .gold-detail-check-title{margin: 0 13px;font-size: 12px;color: #999;float: left;line-height: 30px;}
-.gold-detail-check-time{float: left;display: inline-block;width: 160px;height: 30px;border: 1px solid #dcdcdc;background-color: #fff;}
+.gold-detail-check-date input{float: left;display: inline-block;width: 160px;height: 30px;border: 1px solid #dcdcdc;background-color: #fff;}
 .gold-detail-check{float: left;margin-left: 12px;cursor: pointer;border-radius: 1px;width: 60px;height: 30px;display: inline-block;color:#fff;text-align: center;line-height: 30px;background-color: #3bafda;}
 .gold-detail-show-title{width: 100%;height: 52px;margin-top: 74px;background-color: #fff;border-radius: 5px;color: #999;font-size: 16px;}
 .gold-detail-show-title span{display: inline-block;text-align: center;width: 24.5%;height: 52px;line-height: 52px;}
@@ -22,6 +23,7 @@ em{font-style: normal;}
 .gold-detail-show-add,.gold-detail-show-number{color:#e74c3c;}
 .gold-detail-show-dec{color:#3bafda;}
 .gold-detail-block-change,.gold-store-block-change,.gold-exchange-block-change,.gold-exchange-use-block-change{display: none;}
+//#dateStartCalendar{width: 191px; height: 182px;}
 
 /* 金币商城 */
 .gold-store-title-container,.gold-exchange-title-container{float: left;border-radius: 5px;margin-right: 22px;margin-top: 22px;width: 122px;height: 660px;background-color: #fff;font-size: 14px;overflow: hidden;}
