--- a/source/widget/courseInfor/ui-course-infor.css
+++ b/source/widget/courseInfor/ui-course-infor.css
@@ -451,82 +451,58 @@
   max-width: 100%;
 }
 .course-detail .table {
-  border: 1px solid #e2e2e2;
+  border: 1px solid #eeeeee;
   color: #333333;
   font-size: 12px;
   margin-bottom: 20px;
   width: 100%;
 }
-.course-detail .live_course_nav {
-  width: 100%;
+.course-detail .table_outline {
+  border: 1px solid #eeeeee;
+}
+.course-detail .table_outline th {
   height: 40px;
   background: #eeeeee;
-  color: #c9c9c9;
-  font-weight: 700;
   text-align: center;
-  margin: 0;
-  padding: 0;
-}
-.course-detail .live_course_nav li {
-  float: left;
-  width: 150px;
-  line-height: 40px;
-  font-family: "Microsoft YaHei";
-  list-style: none;
+  color: #999;
   font-size: 12px;
 }
-.course-detail .live_course_nav li.first {
-  width: 480px;
+.course-detail .table_outline th.t-left {
   text-align: left;
   padding-left: 40px;
 }
-.course-detail .live_panel {
-  width: 100%;
-  height: auto;
-  overflow: hidden;
-  outline: none;
-  border: 1px solid #eaeaea;
-  border-bottom: 0;
-}
-.course-detail .live_panel .live_course_detail {
-  overflow: hidden;
-  margin: 0;
+.course-detail .table_outline td {
+  border: 1px solid #eeeeee;
+  border-top: 0 none;
+  height: 38px;
+  line-height: 20px;
   padding: 0;
-}
-.course-detail .live_panel .live_course_detail li {
-  width: 100%;
-  height: 34px;
-  line-height: 34px;
-  color: #333333;
-  border-bottom: 1px solid #ededed;
-  font-size: 12px;
-  font-family: "SimSun";
-}
-.course-detail .live_panel .live_course_detail li div {
-  float: left;
   text-align: center;
+  vertical-align: middle;
+  font-size: 12px;
+  background: #fcfcfc;
+  color: #666;
 }
-.course-detail .live_panel .live_course_detail li .live_name {
-  width: 484px;
-  border-right: 1px solid #ededed;
+.course-detail .table_outline td span.live_teach {
+  display: inline-block;
+  color: #a0a0a0;
+}
+.course-detail .table_outline td .goline {
+  border-radius: 9px;
+  color: #fff;
+  display: inline-block;
+  height: 18px;
+  line-height: 18px;
+  text-align: center;
+  width: 50px;
+  background: #ff9900;
+}
+.course-detail .table_outline td .notStart {
+  color: #999;
+}
+.course-detail .table_outline td.t-left {
   text-align: left;
   padding-left: 10px;
-}
-.course-detail .live_panel .live_course_detail li .live_name .live_teach {
-  color: #a0a0a0;
-}
-.course-detail .live_panel .live_course_detail li .live_name .course_live {
-  color: #ff6500;
-}
-.course-detail .live_panel .live_course_detail li .date,
-.course-detail .live_panel .live_course_detail li .time,
-.course-detail .live_panel .live_course_detail li .study_status {
-  width: 148px;
-  border-right: 1px solid #ededed;
-}
-.course-detail .live_panel .live_course_detail li .study_status {
-  color: #a0a0a0;
-  border-right: 0;
 }
 .course-detail dl {
   overflow: hidden;
@@ -545,38 +521,4 @@
   font-size: 12px;
   line-height: 22px;
   padding-left: 10px;
-}
-.course-detail .table_outline {
-  border: 0;
-}
-.course-detail .table_outline tr:nth-child(2n) {
-  background: #f5f5f5;
-}
-.course-detail .table_outline td {
-  border-bottom: 1px solid #fff;
-  border-top: 0 none;
-  height: 38px;
-  line-height: 20px;
-  padding: 0;
-  text-align: left;
-  vertical-align: middle;
-  font-size: 12px;
-}
-.course-detail .table_outline td .text_c {
-  text-align: left;
-  width: 200px !important;
-}
-.course-detail .table_outline td span {
-  border-radius: 9px;
-  color: #fff;
-  display: inline-block;
-  float: left;
-  height: 18px;
-  line-height: 18px;
-  margin: 0 15px;
-  text-align: center;
-  width: 50px;
-}
-.course-detail .table_outline td .goline {
-  background: #ff9900;
 }
