Signed-off-by: zhixiaoyang <913151232@qq.com>

--- a/source/widget/courses/courses.less
+++ b/source/widget/courses/courses.less
@@ -330,6 +330,7 @@ ul,li{list-style: none;}
 }
 .course-list .fresh-course-attention{
 	font-size: 12px;
+	height: 20px;
 	em,i{
 		font-style: normal;
 	}
@@ -342,6 +343,9 @@ ul,li{list-style: none;}
 	padding: 0 8px;
 	display: inline-block;
 	font-size: 12px;
+	&:hover{
+		color: #fff;
+	}
 }
 .course-list .fresh-add {
 	font-size: 14px;
