--- a/source/widget/courses/courses.css
+++ b/source/widget/courses/courses.css
@@ -312,6 +312,7 @@ li {
 }
 .course-list .fresh-course-attention {
   font-size: 12px;
+  height: 20px;
 }
 .course-list .fresh-course-attention em,
 .course-list .fresh-course-attention i {
@@ -325,6 +326,9 @@ li {
   padding: 0 8px;
   display: inline-block;
   font-size: 12px;
+}
+.course-list .fresh-attention-btn:hover {
+  color: #fff;
 }
 .course-list .fresh-add {
   font-size: 14px;
