Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/homework/homework.css
+++ b/source/widget/homework/homework.css
@@ -396,6 +396,9 @@ body {
   height: 200px;
   margin-top: 20px;
   overflow-y: auto;
+  overflow-x: hidden;
+  word-break: break-all;
+  word-wrap: break-word;
 }
 .homework-wrapper .homework-Feedback-video {
   float: left;
