--- a/source/widget/homework/homework.less
+++ b/source/widget/homework/homework.less
@@ -387,6 +387,9 @@ html,body {
             height: 200px;
             margin-top: 20px;
             overflow-y: auto;
+            overflow-x: hidden;
+            word-break:break-all; 
+          　word-wrap:break-word;
         }
 
     }
